attempted the fixed, opaque navbar stretch goal

--- a/css/index.css
+++ b/css/index.css
@@ -162,8 +162,11 @@ p {
 }
 .nav-bar {
   flex-direction: column;
-  background-color: #F6F6F6;
+  background-color: rgba(246, 246, 246, 0.8);
   border-bottom: 2px solid #F1F1F1;
+  position: fixed;
+  top: 0;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -195,6 +198,9 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.home {
+  margin-top: 100px;
 }
 .home .intro img {
   border-radius: 5px;
