--- a/less/navigation.less
+++ b/less/navigation.less
@@ -2,8 +2,12 @@
 
 .nav-bar {
     flex-direction: column;
-    background-color: @nav-bg;
+    background-color: rgba(246, 246, 246, 0.8);
     border-bottom: 2px solid @nav-border;
+
+    position: fixed;
+    top: 0;
+    width: 100%;
 
     .flex-center();
 
